完成better-scroll插件菜单左右关联，引入sass，重新编译css

--- a/static/reset.css
+++ b/static/reset.css
@@ -1,2 +1,7 @@
 .clearfix{display: inline-block;}
 .clearfix:after{display: block;content: ".";height: 0;line-height: 0;clear: both;visibility: hidden;}
+
+ul{padding: 0;}
+li{list-style: none;}
+*{margin: 0;}
+a{text-decoration: none;}
